--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,12 @@
 name: task_pro
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+7
+version: 1.0.0+10
 
 environment:
   sdk: '>=2.19.0 <3.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -65,7 +45,8 @@ dependencies:
   flutter_inappwebview: ^5.8.0
   in_app_update: ^4.1.4
   youtube_player_flutter: ^8.1.2
-
+  timer_count_down: ^2.2.2
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +73,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/video/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
