--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: task_pro
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+10
+version: 1.0.0+11
 
 environment:
   sdk: '>=2.19.0 <3.0.0'
@@ -47,6 +47,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   timer_count_down: ^2.2.2
   video_player: ^2.6.1
+  lottie:
 
 dev_dependencies:
   flutter_test:
