--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   timer_count_down: ^2.2.2
   video_player: ^2.6.1
+  google_mobile_ads: ^4.0.0
 
 dev_dependencies:
   flutter_test:
